tests/baselines/reference/partiallyAmbientFundule.errors.txt
partiallyAmbientFundule.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== partiallyAmbientFundule.ts (1 errors) ====
    declare module foo {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function x(): any;
    }
    function foo () { } // Legal, because module is ambient